// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render correctly with alignSelf 1`] = `
<div
  className="sc-gsnTZi gdIYDk"
/>
`;

exports[`Column component should render correctly with each direction padding props 1`] = `
<div
  className="sc-gsnTZi gAqiRf"
/>
`;

exports[`Column component should render correctly with each side padding props 1`] = `
<div
  className="sc-gsnTZi hWooyO"
/>
`;

exports[`Column component should render correctly with global padding props 1`] = `
<div
  className="sc-gsnTZi cwGIjz"
/>
`;

exports[`Column component should render correctly with max width 1`] = `
<div
  className="sc-gsnTZi fzzLvg"
/>
`;

exports[`Column component should render correctly with order props 1`] = `
<div
  className="sc-gsnTZi hXkfnO"
/>
`;

exports[`Column component should render correctly with some props 1`] = `
<div
  className="sc-gsnTZi dPuovA"
/>
`;

exports[`Column component should render correctly with textAlign 1`] = `
<div
  className="sc-gsnTZi brqLSj"
/>
`;

exports[`Column component should render correctly without props 1`] = `
<div
  className="sc-gsnTZi dPuovA"
/>
`;
